Version 3.4.x (2011-??-??)
	Added support for IOS5.
Version 3.4.3 (2011-06-09)
	Fixed bug where deleting backwards before an image into a list would put the cursor in the wrong location.
	Fixed bug where styles plugin would not apply styles across multiple selected block elements correctly.
	Fixed bug where cursor would jump to start of document when selection contained empty table cells in IE8.
	Fixed bug where applied styles wouldn't be kept if you pressed enter twice to produce two paragraphs.
	Fixed bug where a ghost like caret would appear on Gecko when pressing enter while having a text color applied.
	Fixed bug where IE would produce absolute urls if you inserted a image/link and reloaded the page.
	Fixed bug where applying a heading style to a list item would cascade style to children list items.
	Fixed bug where Editor loses focus when backspacing and changing styles in WebKit.
	Fixed bug where exception was thrown in tinymce.util.URI when parsing a relative URI and no base_uri setting was provided.
	Fixed bug where alt-f10 was not always giving focus to the toolbar on Safari.
	Added new 'allow_html_in_named_anchor' option to allow html to occur within a named anchor tag.  Use at own risk.
	Added plugin dependency support.  Will autoload plugins specified as a dependency if they haven't been loaded.
	Fixed bug where the autolink plugin didn't work with non-English keyboards when pressing ).
	Added possibility to change properties of all table cells in a column.
	Added external_image_list option to get images list from user-defined variable or function.
	Fixed bug where the autoresize plugin wouldn't reduce the editors height on Chrome.
	Fixed bug where table size inputs were to small for values with size units.
	Fixed bug where table cell/row size input values were not validated.
	Fixed bug where menu item line-height would be set to wrong value by external styles.
	Fixed bug where hasUndo() would return wrong answer.